Revision
- keeping track of references
- keeping track of launch options