@@ -5,3 +5,10 @@
 
 ## Tuning Java heap size, metaspace size and other such items
 <https://cf-docs.jp-east-1.paas.cloud.global.fujitsu.com/en/manual/overview/overview/topics/t-fjbp-tuning.html>
+
+## Launch Options
+	-XX:MaxMetaspaceSize=50M 
+	-XX:-UseCompressedClassPointers
+	-Xloggc:gclog.log 
+	-XX:+PrintGCDetails 
+	-XX:+PrintGCDateStamps
